--- a/source/admin/config.yml
+++ b/source/admin/config.yml
@@ -1,7 +1,5 @@
 backend:
-  name: gitlab
-  repo: starrynightstudios/spring-run
-  branch: master # Branch to update (optional; defaults to master)
+  name: git-gateway
 media_folder: "source/images/uploads" # Folder where user uploaded files should go
 public_folder: "source" # CMS now knows 'source' is the public folder and will strip this from the path
 display_url: https://springrun.com
