Bug fixes in schema

--- a/source/admin/config.yml
+++ b/source/admin/config.yml
@@ -27,7 +27,7 @@ collections:
           - label: "Features"
             name: "features"
             widget: "list"
-            field:
+            fields:
               - {label: "Feature", name: "text", widget: "string"}
           - label: "Images"
             name: "images"
@@ -97,7 +97,7 @@ collections:
         fields:
           - {label: "Site Title", name: "title", widget: "string"}
           - {label: "Site Subtitle", name: "subtitle", widget: "string"}
-          - {label: "Image", name: "logo", widget: "image"}
+          - {label: "Logo", name: "logo", widget: "image"}
       - name: "seo"
         label: "SEO Settings"
         file: "data/seo.yml"
@@ -108,4 +108,4 @@ collections:
             name: "keywords"
             widget: "list"
             fields:
-              - {label: "Image", name: "image", widget: "image"}
+              - {label: "Keywork", name: "keyword", widget: "string"}
