--- a/source/admin/config.yml
+++ b/source/admin/config.yml
@@ -58,7 +58,7 @@ collections:
         widget: "select"
         options: ["1", "2", "3", "4"]
       - label: "Number of Bathrooms"
-        name: "bedrooms"
+        name: "bathrooms"
         widget: "select"
         options: ["1", "1.5", "2", "2.5", "3"]
       - label: "Features"
