--- a/source/admin/config.yml
+++ b/source/admin/config.yml
@@ -1,7 +1,10 @@
 backend:
   name: git-gateway
-media_folder: "source/images/uploads" # Folder where user uploaded files should go
-public_folder: "images/uploads" # CMS now knows 'source' is the public folder and will strip this from the path
+
+# images
+media_folder: source/public/images/uploads
+public_folder: /public/images/uploads
+
 display_url: https://springrun.com
 collections:
   - name: "pages"
