--- a/source/admin/config.yml
+++ b/source/admin/config.yml
@@ -1,5 +1,6 @@
 backend:
-  name: git-gateway
+  name: gitlab
+  repo: starrynightstudios/spring-run
 
 # images
 media_folder: source/images/uploads
