--- a/data/pages/homepage.yml
+++ b/data/pages/homepage.yml
@@ -8,6 +8,7 @@ sections:
         label: Child learning to ride bike
       - image: /images/uploads/screen-shot-2018-07-05-at-9.18.12-pm.png
         label: Girl blowing bubbles
+    title: The Perfect Life!
     type: imageOnly
   - content: >-
       Spring Run is a place to enjoy a happy life and to play. There will be two
@@ -29,5 +30,12 @@ sections:
 
       ##
     type: contentOnly
-  - content: Timeline
+  - content: Timeline info goes here.
+    title: Timeline
+    type: contentOnly
+  - content: Phases info goes here.
+    title: Phases
+    type: contentOnly
+  - content: Content goes here.
+    title: Appointments to See
     type: contentOnly
