--- a/data/pages/kitchen-sink.yml
+++ b/data/pages/kitchen-sink.yml
@@ -52,7 +52,7 @@ sections:
       nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec
       tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget
       nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra,
-      per inceptos himenaeos. Curabitur sodales ligula in libero. 
+      per inceptos himenaeos. Curabitur sodales ligula in libero.
 
 
 
@@ -62,7 +62,7 @@ sections:
       tristique sem. Proin ut ligula vel nunc egestas porttitor. Morbi lectus
       risus, iaculis vel, suscipit quis, luctus non, massa. Fusce ac turpis quis
       ligula lacinia aliquet. Mauris ipsum. Nulla metus metus, ullamcorper vel,
-      tincidunt sed, euismod in, nibh. 
+      tincidunt sed, euismod in, nibh.
 
 
 
@@ -72,7 +72,7 @@ sections:
       lacinia, urna non tincidunt mattis, tortor neque adipiscing diam, a cursus
       ipsum ante quis turpis. Nulla facilisi. Ut fringilla. Suspendisse potenti.
       Nunc feugiat mi a tellus consequat imperdiet. Vestibulum sapien. Proin
-      quam. Etiam ultrices. 
+      quam. Etiam ultrices.
 
 
 
@@ -84,7 +84,7 @@ sections:
       lacinia molestie dui. Praesent blandit dolor. Sed non quam. In vel mi sit
       amet augue congue elementum. Morbi in ipsum sit amet pede facilisis
       laoreet. Donec lacus nunc, viverra nec, blandit vel, egestas et, augue.
-      Vestibulum tincidunt malesuada tellus. Ut ultrices ultrices enim. 
+      Vestibulum tincidunt malesuada tellus. Ut ultrices ultrices enim.
 
 
 
@@ -96,21 +96,21 @@ sections:
       libero eget ante. Nulla quam.
     subtitle: This is a subtitle
     title: Single Column (Content only
-    type: contentOnly
+    type: content_only
   - images:
       - image: /images/uploads/cfp1.png
       - image: /images/uploads/cp2.png
       - image: /images/uploads/p0.png
     subtitle: This is a subtitle
     title: Single Column (Images Only)
-    type: imageOnly
+    type: images_only
   - content: >-
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio.
       Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at
       nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec
       tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget
       nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra,
-      per inceptos himenaeos. Curabitur sodales ligula in libero. 
+      per inceptos himenaeos. Curabitur sodales ligula in libero.
 
 
       Sed dignissim lacinia nunc. Curabitur tortor. Pellentesque nibh. Aenean
@@ -118,7 +118,7 @@ sections:
       tristique sem. Proin ut ligula vel nunc egestas porttitor. Morbi lectus
       risus, iaculis vel, suscipit quis, luctus non, massa. Fusce ac turpis quis
       ligula lacinia aliquet. Mauris ipsum. Nulla metus metus, ullamcorper vel,
-      tincidunt sed, euismod in, nibh. 
+      tincidunt sed, euismod in, nibh.
 
 
       Quisque volutpat condimentum velit. Class aptent taciti sociosqu ad litora
@@ -126,7 +126,7 @@ sections:
       lacinia, urna non tincidunt mattis, tortor neque adipiscing diam, a cursus
       ipsum ante quis turpis. Nulla facilisi. Ut fringilla. Suspendisse potenti.
       Nunc feugiat mi a tellus consequat imperdiet. Vestibulum sapien. Proin
-      quam. Etiam ultrices. 
+      quam. Etiam ultrices.
 
 
       Suspendisse in justo eu magna luctus suscipit. Sed lectus. Integer euismod
@@ -136,7 +136,7 @@ sections:
       lacinia molestie dui. Praesent blandit dolor. Sed non quam. In vel mi sit
       amet augue congue elementum. Morbi in ipsum sit amet pede facilisis
       laoreet. Donec lacus nunc, viverra nec, blandit vel, egestas et, augue.
-      Vestibulum tincidunt malesuada tellus. Ut ultrices ultrices enim. 
+      Vestibulum tincidunt malesuada tellus. Ut ultrices ultrices enim.
 
 
       Curabitur sit amet mauris. Morbi in dui quis est pulvinar ullamcorper.
@@ -148,14 +148,14 @@ sections:
       - image: /images/uploads/cp2.png
     subtitle: This is a subtitle
     title: Two Column (Image Left)
-    type: imgLeft
+    type: images_left
   - content: >-
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio.
       Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at
       nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec
       tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget
       nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra,
-      per inceptos himenaeos. Curabitur sodales ligula in libero. 
+      per inceptos himenaeos. Curabitur sodales ligula in libero.
 
 
       Sed dignissim lacinia nunc. Curabitur tortor. Pellentesque nibh. Aenean
@@ -163,7 +163,7 @@ sections:
       tristique sem. Proin ut ligula vel nunc egestas porttitor. Morbi lectus
       risus, iaculis vel, suscipit quis, luctus non, massa. Fusce ac turpis quis
       ligula lacinia aliquet. Mauris ipsum. Nulla metus metus, ullamcorper vel,
-      tincidunt sed, euismod in, nibh. 
+      tincidunt sed, euismod in, nibh.
 
 
       Quisque volutpat condimentum velit. Class aptent taciti sociosqu ad litora
@@ -171,7 +171,7 @@ sections:
       lacinia, urna non tincidunt mattis, tortor neque adipiscing diam, a cursus
       ipsum ante quis turpis. Nulla facilisi. Ut fringilla. Suspendisse potenti.
       Nunc feugiat mi a tellus consequat imperdiet. Vestibulum sapien. Proin
-      quam. Etiam ultrices. 
+      quam. Etiam ultrices.
 
 
       Suspendisse in justo eu magna luctus suscipit. Sed lectus. Integer euismod
@@ -181,7 +181,7 @@ sections:
       lacinia molestie dui. Praesent blandit dolor. Sed non quam. In vel mi sit
       amet augue congue elementum. Morbi in ipsum sit amet pede facilisis
       laoreet. Donec lacus nunc, viverra nec, blandit vel, egestas et, augue.
-      Vestibulum tincidunt malesuada tellus. Ut ultrices ultrices enim. 
+      Vestibulum tincidunt malesuada tellus. Ut ultrices ultrices enim.
 
 
       Curabitur sit amet mauris. Morbi in dui quis est pulvinar ullamcorper.
@@ -193,4 +193,4 @@ sections:
       - image: /images/uploads/fp2.png
     subtitle: This is a subtitle
     title: Two Column (Image Right)
-    type: imgRight
+    type: images_right
