--- a/data/pages/kitchen-sink.yml
+++ b/data/pages/kitchen-sink.yml
@@ -11,7 +11,7 @@ sections:
       **Bold Text**
 
 
-      _**Italic Text**_
+      **_Italic Text_**
 
 
       **`Code Format`**
@@ -44,17 +44,12 @@ sections:
       2. List
 
 
-      ![](/images/uploads/cfp1.png)
-
-
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio.
       Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at
       nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec
       tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget
       nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra,
       per inceptos himenaeos. Curabitur sodales ligula in libero.
-
-
 
 
       Sed dignissim lacinia nunc. Curabitur tortor. Pellentesque nibh. Aenean
@@ -65,16 +60,12 @@ sections:
       tincidunt sed, euismod in, nibh.
 
 
-
-
       Quisque volutpat condimentum velit. Class aptent taciti sociosqu ad litora
       torquent per conubia nostra, per inceptos himenaeos. Nam nec ante. Sed
       lacinia, urna non tincidunt mattis, tortor neque adipiscing diam, a cursus
       ipsum ante quis turpis. Nulla facilisi. Ut fringilla. Suspendisse potenti.
       Nunc feugiat mi a tellus consequat imperdiet. Vestibulum sapien. Proin
       quam. Etiam ultrices.
-
-
 
 
       Suspendisse in justo eu magna luctus suscipit. Sed lectus. Integer euismod
@@ -87,8 +78,6 @@ sections:
       Vestibulum tincidunt malesuada tellus. Ut ultrices ultrices enim.
 
 
-
-
       Curabitur sit amet mauris. Morbi in dui quis est pulvinar ullamcorper.
       Nulla facilisi. Integer lacinia sollicitudin massa. Cras metus. Sed
       aliquet risus a tortor. Integer id quam. Morbi mi. Quisque nisl felis,
@@ -96,7 +85,7 @@ sections:
       libero eget ante. Nulla quam.
     subtitle: This is a subtitle
     title: Single Column (Content only
-    type: content_only
+    type: contentOnly
   - images:
       - image: /images/uploads/cfp1.png
       - image: /images/uploads/cp2.png
