Added contact form in footer. Added header component

--- a/source/admin/config.yml
+++ b/source/admin/config.yml
@@ -30,6 +30,7 @@ collections:
               - { label: "Single Column (Images only)", value: "images_only" }
               - { label: "Two Column (Image Left)", value: "images_left" }
               - { label: "Two Column (Image Right)", value: "images_right" }
+              - { label: "Page Header", value: "header" }
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Subtitle", name: "subtitle", widget: "string"}
           - {label: "Content", name: "content", widget: "markdown"}
@@ -48,52 +49,6 @@ collections:
               - {label: "File", name: "file", widget: "file", required: "false"}
               - {label: "URL", name: "url", widget: "string", required: "false"}
               - {label: "Display Label", name: "label", widget: "string"}
-
-  - name: "models"
-    label: "Models"
-    label_singular: "Model"
-    create: true
-    extension: yml
-    format: yml
-    folder: data/models
-    fields:
-      - {label: "Name", name: "title", widget: "string"}
-      - {label: "Description", name: "description", widget: "markdown"}
-      - {label: "Square Feet", name: "square_feet", widget: "number"}
-      - label: "Number of Bedrooms"
-        name: "bedrooms"
-        widget: "select"
-        options: ["1", "2", "3", "4"]
-      - label: "Number of Bathrooms"
-        name: "bathrooms"
-        widget: "select"
-        options: ["1", "1.5", "2", "2.5", "3"]
-      - label: "Features"
-        label_singular: "Feature"
-        name: "features"
-        widget: "list"
-        fields:
-          - {label: "Feature", name: "text", widget: "string"}
-      - label: "Building Materials"
-        label_singular: "Building Material"
-        name: "building_materials"
-        widget: "list"
-        fields:
-          - {label: "Material", name: "text", widget: "string"}
-      - label: "Images"
-        label_singular: "Image"
-        name: "images"
-        widget: "list"
-        fields:
-          - {label: "Image", name: "image", widget: "image"}
-          - {label: "Display Label", name: "label", widget: "string"}
-      - label: "Floor Plans"
-        label_singular: "Floor Plan"
-        name: "floor_plans"
-        widget: "list"
-        fields:
-          - {label: "Image", name: "image", widget: "image"}
-          - {label: "Display Label", name: "label", widget: "string"}
 
   - name: "settings"
     label: "Settings"
