--- a/source/admin/config.yml
+++ b/source/admin/config.yml
@@ -1,6 +1,5 @@
 backend:
-  name: github
-  repo: starrynightstudios/spring-run
+  name: git-gateway
 
 # images
 media_folder: source/images/uploads
