--- a/data/pages/clubhouse.yml
+++ b/data/pages/clubhouse.yml
@@ -2,6 +2,11 @@ slug: clubhouse
 title: Clubhouse
 description: clubhouse description
 sections:
+  - content: ''
+    images:
+      - image: /images/uploads/cp1.png
+    title: The Clubhouse
+    type: header
   - content: >-
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
       tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
@@ -10,8 +15,6 @@ sections:
       velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
       cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
       est laborum.
-
-
 
 
       * **Lorem ipsum** dolor sit amet, consectetur adipiscing elit
@@ -58,7 +61,3 @@ sections:
       - image: /images/uploads/cfp1.png
         label: Future clubhouse floor plans
     type: images_left
-  - images:
-      - image: /images/uploads/cp1.png
-    title: The Clubhouse
-    type: header
