--- a/data/pages/community.yml
+++ b/data/pages/community.yml
@@ -4,6 +4,11 @@ description: >-
   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
   incididunt ut labore et dolore magna aliqua. 
 sections:
+  - content: ''
+    images:
+      - image: /images/uploads/summerfun_familyoutside.jpg
+    title: The Community
+    type: header
   - content: >-
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
       tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
@@ -12,8 +17,6 @@ sections:
       velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
       cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
       est laborum.
-
-
 
 
       * Lorem ipsum dolor sit amet, consectetur adipiscing elit
@@ -38,8 +41,6 @@ sections:
       velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
       cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
       est laborum.
-
-
 
 
       * Lorem ipsum dolor sit amet, consectetur adipiscing elit
