Update Pages “community”

--- a/data/pages/community.yml
+++ b/data/pages/community.yml
@@ -31,7 +31,7 @@ sections:
     images:
       - image: /images/uploads/screen-shot-2018-07-23-at-7.54.35-pm.png
         label: Spring Run Community Map
-    title: Community
+    title: ''
     type: images_left
   - content: >-
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
